# guaranteed-fair-ensemble

./: .gitignore  .pre-commit-config.yaml  .sample-env  README.md  pyproject.toml  ruff.toml
nlp/: .pre-commit-config.yaml  .sample-env  README.md  bertc.py  evaluator.py  pyproject.toml
nlp/dev/: age.json  gender.json
nlp/scripts/: run_ensemble.py
output/: efficientnet_s-fairvlmed_equal_opportunity_multihead_violations.csv  efficientnet_s-fitzpatrick17k_improvement_table.md  efficientnet_s-fitzpatrick17k_min_recall_multihead_violations.csv  efficientnet_s-ham10000_improvement_table.md  efficientnet_s-ham10000_min_recall_multihead_violations.csv  fairvlmed-equal_opportunity-iteration1_domain_discriminative_efficientnet_s_threshold_evaluation.csv  fairvlmed-equal_opportunity-iteration1_domain_discriminative_efficientnet_s_threshold_evaluation_val.csv  fairvlmed-equal_opportunity-iteration1_domain_discriminative_mobilenetv3_large_threshold_evaluation.csv  fairvlmed-equal_opportunity-iteration1_domain_discriminative_mobilenetv3_large_threshold_evaluation_val.csv  fairvlmed-equal_opportunity-iteration1_domain_discriminative_threshold_evaluation.csv  fairvlmed-equal_opportunity-iteration1_domain_discriminative_threshold_evaluation_val.csv  fairvlmed-equal_opportunity-iteration1_domain_independent_efficientnet_s_threshold_evaluation.csv  fairvlmed-equal_opportunity-iteration1_domain_independent_efficientnet_s_threshold_evaluation_val.csv  fairvlmed-equal_opportunity-iteration1_domain_independent_mobilenetv3_large_threshold_evaluation.csv  (+704 more)
scripts/: all_plots.py  (+8 more)
(+38 files in other folders)
